# tapoctl

./: .SRCINFO  .dockerignore  .gitignore  Cargo.toml  Dockerfile  PKGBUILD  README.md  TODO.md  build.rs
.github/workflows/: publish-beta.yml  publish.yml
docs/: example.md  server.md
example/: README.md  config.toml  dnsmasq.conf  docker-compose.yml
proto/: tapo.proto
src/: cli.rs  completions.rs  config.rs  device.rs  error.rs  main.rs
src/tapo/: color.rs  mod.rs  print.rs  server.rs  state.rs  validation.rs
src/tapo/device/: color_light.rs  generic.rs  light.rs  mod.rs
