[package]
name = "tapoctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
prost = "0.12.3"
serde = { version = "1.0.197", features = ["serde_derive"]}
serde_json = "1.0.114"
spinoff = "0.8.0"
tapo = { version = "0.7.9"}
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"]}
toml = { version = "0.8.11"}
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
