[package]
name = "tapoctl"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["WhySoBad <49595640+WhySoBad@users.noreply.github.com>"]
description = "A cli and server for interacting locally with your tplink tapo lamps from the command line"
readme = "README.md"
homepage = "https://github.com/whysobad/tapoctl"
repository = "https://github.com/whysobad/tapoctl"
keywords = ["tapo", "smart-bulb", "cli", "grpc"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = "4.5.44"
colored = "2.1.0"
colorsys = "0.6.7"
dirs = "5.0.1"
enum_stringify = "0.6.1"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
prost = "0.12.3"
serde = { version = "1.0.197", features = ["serde_derive"]}
serde_json = "1.0.114"
spinoff = "0.8.0"
tapo = { git = "https://github.com/mihai-dinculescu/tapo"}
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"]}
toml = { version = "0.8.11"}
tonic = { version = "0.11.0"}
validator = { version = "0.19.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"